fixed button alignment

--- a/app/common/stylesheets/application.css
+++ b/app/common/stylesheets/application.css
@@ -88,6 +88,12 @@ span.hackscore {
   font-size: 125%;
 }
 
+.delete-button {
+  position:absolute;
+  bottom:0;
+  width: 94% !important;
+}
+
 tr.ng-enter,
 tr.ng-leave,
 tr.ng-move {
